[package]
name = "ingest-nuttx-builds"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Ingest Build Logs from Apache NuttX RTOS into Prometheus Pushgateway"
homepage = "https://lupyuen.github.io/articles/ci4"
repository = "https://github.com/lupyuen/ingest-nuttx-builds"
readme = "README.md"
keywords = ["nuttx", "rtos", "ci", "prometheus", "pushgateway"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
octocrab = "0.41.2"
regex = "1.11.1"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["full"] }
